--- a/brewing-tour/css/html5reset.css
+++ b/brewing-tour/css/html5reset.css
@@ -18,7 +18,7 @@ time, mark, audio, video {
     outline: 0;
     font-size: 100%;
     vertical-align: baseline;
-    background: transparent;
+    /*background: transparent;*/
 }
 
 body {
