--- a/brewing-tour/css/main.css
+++ b/brewing-tour/css/main.css
@@ -11,7 +11,7 @@
    ========================================================================== */
 
 html {
-    color: #222;
+    /*color: #222;*/
     font-size: 1em;
     line-height: 1.4;
 }
@@ -90,26 +90,6 @@ textarea {
     color: #000;
     padding: 0.2em 0;
 }
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* ==========================================================================
    Helper classes
