--- a/brewing-tour/css/custom.css
+++ b/brewing-tour/css/custom.css
@@ -52,6 +52,7 @@ h2 {
   font-weight: 400;
   font-size: 1.5em;
   text-align: center;
+  line-height: 1.3;
   color: #C77F2E;
 }
 
@@ -356,6 +357,13 @@ img.left {
 }
 
 .rwd-break {
+  display: none;
+}
+
+.scrollup {
+  position: fixed;
+  bottom: 50px;
+  right: 100px;
   display: none;
 }
 
