--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -199,6 +199,7 @@ footer {
   font: 4em 'Open Sans', serif;
   font-weight: 200;
   padding: 10px 30px 20px 20px;
+  cursor: pointer;
 }
 
 .close-intro:hover {
@@ -219,7 +220,7 @@ footer {
 
 .highlight a:hover {
   color: greenyellow;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 /* brain venn */
@@ -339,6 +340,35 @@ a.brain-nav:hover {
   width: 120px;
   margin: 20px;
   padding: 0;
+}
+
+.outer-video-container {
+  width: 60%;
+}
+
+@media only screen and (max-width : 768px) {
+
+  .outer-video-container {
+    width: 100%;
+  }
+
+}
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  height: auto;
+}
+
+.embed-container iframe, .embed-container object, .embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .grid img:hover {
