--- a/brewing-tour/css/custom.css
+++ b/brewing-tour/css/custom.css
@@ -1,6 +1,7 @@
 html {
   background-image: url(../img/bubble-pattern.png);
   background-repeat: repeat;
+  background-attachment: fixed;
 }
 
 body {
@@ -19,14 +20,14 @@ body {
 }
 
 h1 {
-  font-family: "Bodoni", Helvetica, Arial, Sans-Serif;
+  font-family: "Bodoni Bold", Helvetica, Arial, Sans-Serif;
   text-transform: uppercase;
   font-weight: 400;
   letter-spacing: .125em;
   font-size: 3em;
   line-height: 1.25;
   text-align: center;
-  color: #4D2B22;
+  color: darkslategray;
 }
 
 h1 a {
@@ -36,7 +37,6 @@ h1 a {
 
 h1.hero-title {
   font-size: 6em;
-  font-family: "Bodoni Bold", Helvetica, Arial, Sans-Serif;
   z-index: 1;
   width: 50%;
   position: absolute;
@@ -48,28 +48,16 @@ h1.hero-title {
 }
 
 h2 {
-  font-family: "Bodoni", Helvetica, Arial, Sans-Serif;
+  font-family: 'Work Sans', Helvetica, Arial, Sans-Serif;
   font-weight: 400;
-  font-size: 1.5em;
+  font-size: 1.6em;
   text-align: center;
   line-height: 1.3;
-  color: #C77F2E;
+  color: olivedrab;
 }
 
 h2.subhead-top {
   margin: .5em auto 1em;
-}
-
-h2.subhead-top a {
-  color: #E4542F;
-  border-bottom: 2px solid #E4542F;
-  text-decoration: none;
-  text-align: center;
-}
-
-h2.subhead-top a:hover {
-  color: #FF4600;
-  border-bottom: 2px solid #FF4600;
 }
 
 h2.subhead-text {
@@ -77,7 +65,7 @@ h2.subhead-text {
 }
 
 h3 {
-  color: #807471;
+  color: olivedrab;
   font-size: 1.2em;
   margin: 2.5em auto 1em;
 }
@@ -106,12 +94,12 @@ p {
   font-size: 1.1em;
   display: block;
   line-height: 2;
-  color: #988B88;
+  color: #7f8c8d;
   margin-top: 1em;
 }
 
 p a {
-  color: #988B88;
+  color: #7f8c8d;
   text-decoration: none;
 }
 
@@ -131,9 +119,34 @@ p.caption-text {
   margin-top: .5em;
 }
 
+.nav a {
+  font-family: 'Work Sans', Helvetica, Arial, Sans-Serif;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  text-decoration: none;
+  display: inline-block;
+  width: 16.66%;
+  padding: 1em 0 0 0;
+  color: #FF6D5E;
+}
+
+.nav a:hover {
+  color: #CF442B;
+}
+
+.wrapper a {
+  color: #7C1E44;
+  text-decoration: none;
+  font-weight: bold;
+} 
+
+.wrapper a:hover {
+  color: #C7306F;
+}
+
 span.drop {
   float: left;
-  color: #4D2B22;
+  color: #3E5759;
   font-size: 60px;
   line-height: 20px;
   padding: 30px 8px 0 0;
@@ -142,7 +155,7 @@ span.drop {
 
 strong {
   font-weight: bold;
-  color: #807471;
+  color: #3E5759;
 }
 
 p.footer-text {
@@ -176,21 +189,6 @@ ul li {
   font-size: .85em;
   width: 70%;
   margin: 1em auto 1.5em;
-}
-
-.nav a {
-  font-family: 'Work Sans', Helvetica, Arial, Sans-Serif;
-  letter-spacing: 0.2em;
-  text-transform: uppercase;
-  text-decoration: none;
-  display: inline-block;
-  width: 16.66%;
-  padding: 1em 0 0 0;
-  color: #FF6D5E;
-}
-
-.nav a:hover {
-  color: #CF442B;
 }
 
 .one:hover ~ hr {
@@ -256,16 +254,6 @@ div.main-wrapper {
   width: 50%;
   margin: 0 auto;
 }
- 
-.wrapper a {
-  color: #7C1E44;
-  text-decoration: none;
-  font-weight: bold;
-} 
-
-.wrapper a:hover {
-  color: #C7306F;
-}
 
 .header { 
   width: 80%;
@@ -277,129 +265,123 @@ div.main-wrapper {
   padding-bottom: 1em;
 }
 
-a.btn-temp {
-  background: #E4542F;
-  color: white;
-  text-align: center;
-  padding: 20px 60px;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-}
-
-a.btn-temp:hover {
-  background-color: #CF442B;
-  color: lightyellow;
-}
-
-/* General button style (reset) */
-a.btn-5 {
-  border: none;
-  font-family: inherit;
-  font-size: inherit;
-  color: inherit;
-  background: none;
-  cursor: pointer;
-  padding: 0;
-  display: inline-block;
-  margin: 15px 30px;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-weight: 700;
-  outline: none;
-  position: relative;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  transition: all 0.3s;
-  background: #E4542F;
-  color: #fff;
-  height: 70px;
-  min-width: 260px;
-  line-height: 24px;
-  font-size: 16px;
-  overflow: hidden;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-a.btn-5:after {
-  content: '';
-  position: absolute;
-  z-index: -1;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-a.btn-5:before,
-.icon-heart:after,
-.icon-star:after,
-.icon-plus:after,
-.icon-file:before {
-  speak: none;
-  line-height: 1;
-  position: relative;
-  -webkit-font-smoothing: antialiased;
-  position: absolute;
-  left: 0;
-  top: -100%;
-  height: 100%;
-  width: 100%;
-  line-height: 2.5;
-  font-size: 180%;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.icon-beer:before {
-  content: url(../img/beer-mug-icon.png);
-}
-
 .center-text {
   text-align: center;
-  margin: 2em;
+  margin: 2em auto;
 }
 
-a.btn-5:active {
-  background: #FF6D5E;
-  top: 2px;
+.btn-5 {
+    border: none;
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background: none;
+    cursor: pointer;
+    padding: 25px 80px;
+    display: inline-block;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 400;
+    outline: none;
+    background: #E4542F;
+    color: #fff;
+    height: 70px;
+    min-width: 260px;
+    line-height: 24px;
+    font-size: 16px;
 }
 
-a.btn-5 span {
-  display: inline-block;
-  vertical-align: middle;
-  width: 100%;
-  height: 100%;
-  -webkit-transition: all 0.3s;
-  -webkit-backface-visibility: hidden;
-  -moz-transition: all 0.3s;
-  -moz-backface-visibility: hidden;
-  transition: all 0.3s;
-  backface-visibility: hidden;
-}
+@media only screen and (min-width: 600px) {
 
-a.btn-5:active:before {
-  color: white;
-}
+  /* General button style (reset) */
+  .btn-5 {
+    margin: 15px 30px;
+    position: relative;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+    overflow: hidden;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
 
-a.btn-5:hover span {
-  -webkit-transform: translateY(300%);
-  -moz-transform: translateY(300%);
-  -ms-transform: translateY(300%);
-  transform: translateY(300%);
-}
+  .btn-5:after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+  }
 
+  .btn-5:before,
+  .icon-heart:after,
+  .icon-star:after,
+  .icon-plus:after,
+  .icon-file:before {
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 2.5;
+    position: relative;
+    -webkit-font-smoothing: antialiased;
+    position: absolute;
+    left: 0;
+    top: -100%;
+    height: 100%;
+    width: 100%;
+    font-size: 180%;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+  }
 
-a.btn-5:hover:before {
-  top: 0;
+  .btn-5:active {
+    background: #FF6D5E;
+    top: 2px;
+  }
+
+  .btn-5 span {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: all 0.3s;
+    -webkit-backface-visibility: hidden;
+    -moz-transition: all 0.3s;
+    -moz-backface-visibility: hidden;
+    transition: all 0.3s;
+    backface-visibility: hidden;
+  }
+
+  .btn-5:active:before {
+    color: white;
+  }
+
+  .btn-5:hover span {
+    -webkit-transform: translateY(300%);
+    -moz-transform: translateY(300%);
+    -ms-transform: translateY(300%);
+    transform: translateY(300%);
+  }
+
+  .btn-5:hover:before {
+    top: 0;
+  }
+
+  .icon-beer:before {
+    content: url(../img/beer-mug-icon.png);
+  }
+
 }
 
 hr.divider-line {
   height: 1px;
   width: 100%;
   margin: 2em auto;
-  background: #DAC1BA;
+  background: #7f8c8d;
 }
 
 .shim {
@@ -417,7 +399,7 @@ hr.footer-line {
   height: 1px;
   width: 60%;
   margin: 0 auto;
-  background: #DAC1BA;
+  background: #7f8c8d;
 }
 
 #bg {
