--- a/brewing-tour/css/custom.css
+++ b/brewing-tour/css/custom.css
@@ -251,7 +251,7 @@ div.main-wrapper {
 }
 
 .wrapper {
-  width: 50%;
+  width: 90%;
   margin: 0 auto;
 }
 
@@ -474,6 +474,10 @@ img.left {
   display: none;
 }
 
+.wrapper {
+  width: 90%;
+}
+
 @media only screen and (max-width: 840px) {
 
   h1 {
@@ -515,7 +519,7 @@ img.left {
   }
 
   h1 {
-    font-size: 3em;
+    font-size: 2.5em;
   }
 
   h2.subhead-text {
