--- a/brewing-tour/css/custom.css
+++ b/brewing-tour/css/custom.css
@@ -582,7 +582,7 @@ img.left {
 
 }
 
-@media only screen and (min-width: 840px) {
+@media only screen and (min-device-width: 840px) {
 
   .nav a {
     width: 16.66%;
