--- a/brewing-tour/css/custom.css
+++ b/brewing-tour/css/custom.css
@@ -392,6 +392,19 @@ img.left {
   width: 90%;
 }
 
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+
+  .nav .main {
+    margin: 1em auto 0;    
+  }
+
+  .nav a {
+    width: 50%;
+    line-height: 2em;
+  }
+
+}
+
 @media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
 
   h1.hero-title {
