--- a/brewing-tour/css/custom.css
+++ b/brewing-tour/css/custom.css
@@ -403,6 +403,24 @@ img.left {
     line-height: 2em;
   }
 
+  p {
+    font-size: 2.5em;
+  }
+
+  p.caption-text {
+    font-size: 2em;
+  }
+
+  .nav .main {
+    font-size: 3em;
+    width: 90%;
+  }
+
+  .nav {
+    font-size: 3em;
+    width: 90%;
+  }
+
 }
 
 @media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
@@ -462,6 +480,24 @@ img.left {
     display: block;
   }
 
+  p {
+    font-size: 2.5em;
+  }
+
+  p.caption-text {
+    font-size: 2em;
+  }
+
+  .nav .main {
+    font-size: 3em;
+    width: 90%;
+  }
+
+  .nav {
+    font-size: 3em;
+    width: 90%;
+  }
+
 }
 
 @media only screen and (max-width: 600px), only screen and (max-device-width: 600px) {
@@ -473,6 +509,24 @@ img.left {
   .nav a {
     width: 50%;
     line-height: 2em;
+  }
+
+  p {
+    font-size: 2.5em;
+  }
+
+  p.caption-text {
+    font-size: 2em;
+  }
+
+  .nav .main {
+    font-size: 3em;
+    width: 90%;
+  }
+
+  .nav {
+    font-size: 3em;
+    width: 90%;
   }
 
 }
