--- a/brewing-tour/css/custom.css
+++ b/brewing-tour/css/custom.css
@@ -395,21 +395,13 @@ img.left {
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
 
   .nav .main {
-    margin: 1em auto 0;    
+    margin: 1em auto 0;
   }
 
   .nav a {
     width: 50%;
     line-height: 2em;
-    margin: 1em auto; 
-  }
-
-  p {
-    font-size: 2.5em;
-  }
-
-  p.caption-text {
-    font-size: 2em;
+    margin: .5em auto 0;
   }
 
   .nav .main {
@@ -420,6 +412,30 @@ img.left {
   .nav {
     font-size: 3em;
     width: 90%;
+  }
+
+  h2 {
+    font-size: 3em;
+  }
+
+  h3 {
+    font-size: 3em;
+  }
+
+  h4 {
+    font-size: 2em;
+  }
+
+  p {
+    font-size: 2.5em;
+  }
+
+  p.caption-text {
+    font-size: 2em;
+  }
+
+  p.footer-text {
+    font-size: 1.5em;
   }
 
 }
@@ -436,15 +452,31 @@ img.left {
   }
 
   h2.subhead-text {
+    font-size: 3em;
     margin: 2em auto 1em;
   }
 
+  h3 {
+    font-size: 3em;
+  }
+
   h4 {
+    font-size: 2em;
     margin: 1em auto;
   }
 
   p {
+    font-size: 2.5em;
     width: 90%;
+  }
+
+  p.caption-text {
+    font-size: 2em;
+  }
+
+
+  p.footer-text {
+    font-size: 1.5em;
   }
 
   .nav .main {
@@ -454,7 +486,17 @@ img.left {
   .nav a {
     width: 50%;
     line-height: 2em;
-    margin: 1em auto; 
+    margin: .5em auto 0;
+  }
+
+  .nav .main {
+    font-size: 3em;
+    width: 90%;
+  }
+
+  .nav {
+    font-size: 3em;
+    width: 90%;
   }
 
   img.beers-pic { 
@@ -482,24 +524,6 @@ img.left {
     display: block;
   }
 
-  p {
-    font-size: 2.5em;
-  }
-
-  p.caption-text {
-    font-size: 2em;
-  }
-
-  .nav .main {
-    font-size: 3em;
-    width: 90%;
-  }
-
-  .nav {
-    font-size: 3em;
-    width: 90%;
-  }
-
 }
 
 @media only screen and (max-width: 600px), only screen and (max-device-width: 600px) {
@@ -511,7 +535,19 @@ img.left {
   .nav a {
     width: 50%;
     line-height: 2em;
-    margin: 1em auto; 
+    margin: .5em auto 0;
+  }
+
+  h2 {
+    font-size: 3em;
+  }
+
+  h3 {
+    font-size: 3em;
+  }
+
+  h4 {
+    font-size: 2em;
   }
 
   p {
@@ -530,6 +566,10 @@ img.left {
   .nav {
     font-size: 3em;
     width: 90%;
+  }
+
+  p.footer-text {
+    font-size: 1.5em;
   }
 
 }
