--- a/brewing-tour/css/custom.css
+++ b/brewing-tour/css/custom.css
@@ -401,7 +401,7 @@ img.left {
   .nav a {
     width: 50%;
     line-height: 2em;
-    margin: .5em auto 0;
+    margin: 0 auto;
   }
 
   .nav .main {
@@ -486,7 +486,7 @@ img.left {
   .nav a {
     width: 50%;
     line-height: 2em;
-    margin: .5em auto 0;
+    margin: 0 auto;
   }
 
   .nav .main {
@@ -535,7 +535,7 @@ img.left {
   .nav a {
     width: 50%;
     line-height: 2em;
-    margin: .5em auto 0;
+    margin: 0 auto;
   }
 
   h2 {
