--- a/brewing-tour/css/custom.css
+++ b/brewing-tour/css/custom.css
@@ -373,6 +373,18 @@ img.left {
   margin: 0.5em 2em 1em 1em;
 }
 
+.btn-5 {
+  margin: 15px auto;
+  width: 100%;
+  height: 150px;
+  line-height: 1.5;
+  margin: 15px auto;
+}
+
+.btn-5 span {
+  font-size: 4em;
+}
+
 .icon {
   width: 30px;
 }
@@ -592,11 +604,8 @@ img.left {
 
   /* General button style (reset) */
   .btn-5 {
-    margin: 15px auto;
+    margin: 15px 30px;
     position: relative;
-    width: 100%;
-    height: 150px;
-    line-height: 1.5;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     transition: all 0.3s;
@@ -648,7 +657,6 @@ img.left {
     display: inline-block;
     width: 100%;
     height: 100%;
-    font-size: 4em;
     -webkit-transition: all 0.3s;
     -webkit-backface-visibility: hidden;
     -moz-transition: all 0.3s;
