--- a/brewing-tour/css/custom.css
+++ b/brewing-tour/css/custom.css
@@ -439,7 +439,8 @@ Media Queries
 
   .nav a {
     width: 50%;
-    line-height: 1.5em;
+    font-size: 2em;
+    line-height: 2em;
     margin: 0 auto;
   }
 
@@ -469,7 +470,8 @@ Media Queries
 
   .nav a {
     width: 50%;
-    line-height: 1.5em;
+    font-size: 2em;
+    line-height: 2em;
     margin: 0 auto;
   }
 
