--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -152,19 +152,19 @@ div.sidebar {
 }
 
 .current {
-  background-color: greenyellow;
+  background-color: springgreen;
 }
 
 ul.nav-ul {
   padding-top: 1.5em;
-} 
+}
 
 ul.nav-ul li {
   list-style: none;
 }
 
 a.nav:hover {
-  background-color: aqua;
+  background-color: #87ffe3;
 }
 
 /* main content */
@@ -203,7 +203,7 @@ footer {
 }
 
 .close-intro:hover {
-  color: greenyellow;
+  color: springgreen;
 }
 
 .highlight {
@@ -215,11 +215,11 @@ footer {
 }
 
 .highlight a {
-  color: aqua;
+  color: #87ffe3;
 }
 
 .highlight a:hover {
-  color: greenyellow;
+  color: springgreen;
   text-decoration: none;
 }
 
@@ -298,12 +298,12 @@ a.brain-nav:hover {
 }
 
 .quote:hover {
-  background-color: aqua;
+  background-color: #87ffe3;
 }
 
 .colorize {
   color: #111;
-  background-color: aqua
+  background-color: #87ffe3
 }
 
 .fade p {
@@ -444,7 +444,7 @@ img.about-img {
 }
 
 .about-format {
-  float: left;
+  display: block;
   width: 50%;
   margin: 0;
   padding: 0;
@@ -460,17 +460,22 @@ a.about-link:hover {
 }
 
 .about-sidebar {
-  float: left;
-  width: 40%;
-  margin: 60px 0 0 40px;
+  display: block;
+  width: 50%;
+  margin: 50px 0 0 0;
   padding: 0;
 }
 
 .short {
   list-style: none;
-  background-color: #333;
+  background-color: #87ffe3;
   margin: 0;
   padding: 25px;
+}
+
+h2.short-title {
+  color: #222;
+  padding-bottom: 10px;
 }
 
 .short ul {
@@ -478,15 +483,10 @@ a.about-link:hover {
 }
 
 .short ul li {
-  color: #BBB;
+  color: #222;
   list-style-position: outside;
   padding-left: .25em;
   margin-top: 10px;
-  padding-bottom: 10px;
-}
-
-h2.short-title {
-  color: #FFF;
   padding-bottom: 10px;
 }
 
@@ -552,7 +552,7 @@ a.presentation {
 }
 
 a.presentation:hover {
-  background-color: aqua;
+  background-color: #87ffe3;
 }
 
 /* resume */
@@ -565,7 +565,7 @@ a.resume {
 }
 
 a.resume:hover {
-  background-color: aqua;
+  background-color: #87ffe3;
 }
 
 .resume-format {
@@ -610,10 +610,6 @@ a.broken-link {
 a.broken-link:hover {
   color: #0074D9;
   text-decoration: underline;
-}
-
-span {
-  color: aqua;
 }
 
 .broken-pic {
@@ -718,7 +714,7 @@ span {
     font-size: .75em;
     padding-top: 0;
     padding-bottom: 1em;
-  }  
+  }
 
   ul.nav-ul li {
     line-height: 1.5;
@@ -752,7 +748,7 @@ span {
     padding: 0;
     margin: 0;
     list-style: none;
-    
+
     -ms-box-orient: horizontal;
     display: -webkit-box;
     display: -moz-box;
@@ -760,7 +756,7 @@ span {
     display: -moz-flex;
     display: -webkit-flex;
     display: flex;
-    
+
     -webkit-flex-flow: row wrap;
     flex-flow: row wrap;
   }
